# master_thesis

./: .gitignore  CMakeLists.txt  README.md  img.py  irradiance.ppm  irradiance.ppm2  irradiance.ppm5  master.py  requirements.txt  surfels.csv2  surfels.csv5  test.py  test.sh
res/camera/: close.camera  default.camera  full_scene_1_5.camera  labyrinth.camera
res/renderer/: Bitterli2020.renderer  Bitterli2020Custom.renderer  Bitterli2020_bidirectional_path_tracer.renderer  Majercik2019.renderer  Majercik2019_labyrinth.renderer  Majercik2019_median.renderer  Majercik2019_white_room.renderer  Majercik2022.renderer  Majercik2022_bidirectional_path_tracer.renderer  ShadowTracer.renderer  SoftwareRenderer.renderer  SoftwareRendererBidirectionalPathTracer.renderer  SoftwareRendererPathTracer.renderer  bidirectional_path_tracer.renderer  ddgi.renderer  ddgi_gauss.renderer  ddgi_gauss_median.renderer  ddgi_median_gauss.renderer  full_monte_carlo.renderer  meta_distance.renderer  meta_normal_vector.renderer  meta_position.renderer  meta_weights.renderer  monte_carlo.renderer  monte_carlo_gauss.renderer  monte_carlo_gauss_median.renderer  monte_carlo_m17_denoiser.renderer  monte_carlo_median.renderer  monte_carlo_median_gauss.renderer  path_tracer.renderer  path_tracer_gauss.renderer  path_tracer_median.renderer  phong.renderer  phong_shader.renderer  photon_mapper.renderer  photon_mapper_gauss.renderer  photon_mapper_median.renderer  unidirectional_path_tracer.renderer
res/scene/: cornell_box.scene  cornell_box_5.scene  cornell_box_gray.scene  cornell_box_with_ball.scene  cornell_box_with_blocks.scene  cornell_box_with_blocks_and_ball.scene  cornell_box_with_blocks_big_light.scene  cornell_box_with_blocks_dancing.scene  labyrinth.scene  red_ball_room.scene  white_room.scene
res/shader/: bidirectional_path_tracer.glsl  bidirectional_path_tracer_raygen.rgen  bitterli2020.glsl  bitterli2020_bidirectional_path_tracer.glsl  bitterli2020_bidirectional_path_tracer_reservoir_raygen.rgen  bitterli2020_bidirectional_path_tracer_result_raygen.rgen  bitterli2020_custom.glsl  bitterli2020_custom_reservoir_raygen.rgen  bitterli2020_custom_result_raygen.rgen  bitterli2020_reservoir_raygen.rgen  bitterli2020_result_raygen.rgen  bitterli2020_vision_raygen.rgen  ddgi.glsl  ddgi_closesthit.rchit  ddgi_final_raygen.rgen  ddgi_miss.rmiss  ddgi_probe_raygen.rgen  ddgi_shading_update_comp.comp  denoise_gauss_comp.comp  denoise_m17.glsl  denoise_m17_disocclusion_comp.comp  denoise_m17_firefly_comp.comp  denoise_m17_temporal_comp.comp  denoise_median_comp.comp  helper.glsl  majercik2019.glsl  majercik2019_final_raygen.rgen  majercik2019_probe_raygen.rgen  majercik2019_shading_update_comp.comp  majercik2022.glsl  majercik2022_bidirectional_path_tracer.glsl  majercik2022_bidirectional_path_tracer_final_raygen.rgen  majercik2022_bidirectional_path_tracer_probe_raygen.rgen  majercik2022_bidirectional_path_tracer_probe_reservoir_raygen.rgen  majercik2022_bidirectional_path_tracer_reservoir_raygen.rgen  majercik2022_bidirectional_path_tracer_shading_update_comp.comp  majercik2022_final_raygen.rgen  majercik2022_probe_raygen.rgen  majercik2022_probe_reservoir_raygen.rgen  majercik2022_reservoir_raygen.rgen  (+48 more)
software_renderer/: camera.cpp  camera.h  init_exception.h  main.cpp  mesh_manager.cpp  mesh_manager.h  obj_loader.cpp  obj_loader.h  stl_loader.cpp  stl_loader.h
software_renderer/graphic/: bidirectional_path_tracer.cpp  bidirectional_path_tracer.h  graphics_engine.cpp  graphics_engine.h  graphics_object.cpp  graphics_object.h  mesh.cpp  mesh.h  path_tracer.cpp  path_tracer.h  ray.cpp  renderer.h  scene.cpp  scene.h  triangle.cpp  triangle.h
software_renderer/math/: aabb.cpp  aabb.h  bounding_volume_hierachy.cpp  bounding_volume_hierachy.h  matrix.cpp  matrix.h  random.cpp  random.h  ray.h  rotation.cpp  rotation.h  vector.h
src/: free_input.cpp  free_input.h  init_exception.cpp  input.cpp  input.h  input_parser.cpp  input_parser.h  main.cpp  mesh_manager.cpp  mesh_manager.h  obj_loader.cpp  obj_loader.h  stl_loader.cpp  stl_loader.h
src/graphic/: camera.cpp  camera.h  compute_pipeline.cpp  compute_pipeline.h  device.cpp  device.h  frame_buffer.cpp  frame_buffer.h  graphics_engine.cpp  graphics_engine.h  graphics_object.cpp  graphics_object.h  mesh.cpp  mesh.h  ray_tracing_pipeline.cpp  ray_tracing_pipeline.h  swapchain.cpp  swapchain.h
src/graphic/denoiser/: denoiser.cpp  denoiser.h  gauss_denoiser.cpp  gauss_denoiser.h  m17_denoiser.cpp  m17_denoiser.h  median_denoiser.cpp  median_denoiser.h
src/graphic/helper/: bottom_acceleration_structure.cpp  bottom_acceleration_structure.h  buffer.cpp  buffer.h  buffer_descriptor.h  command_buffer.cpp  command_buffer.h  data_buffer.cpp  data_buffer.h  descriptor.cpp  descriptor.h  descriptor_collection.cpp  descriptor_collection.h  function_load.cpp  function_load.h  image.cpp  image.h  image_buffer.cpp  image_buffer.h  multi_buffer_descriptor.cpp  multi_buffer_descriptor.h  queue.cpp  queue.h  render_info.h  shared_buffer.h  single_buffer_descriptor.cpp  single_buffer_descriptor.h  top_acceleration_structure.cpp  top_acceleration_structure.h  top_acceleration_structure_buffer.cpp  top_acceleration_structure_buffer.h
src/graphic/pipeline/: graphics_pipeline.cpp  graphics_pipeline.h  pipeline.cpp  pipeline.h  ray_tracing_pipeline.cpp  ray_tracing_pipeline.h  ray_tracing_pipeline_points.cpp  ray_tracing_pipeline_points.h
src/graphic/renderer/: bidirectional_path_tracer.cpp  bidirectional_path_tracer.h  bitterli2020_bidirectional_path_tracer.cpp  bitterli2020_bidirectional_path_tracer.h  bitterli2020_custom_renderer.cpp  bitterli2020_custom_renderer.h  bitterli2020_renderer.cpp  bitterli2020_renderer.h  ddgi_renderer.cpp  ddgi_renderer.h  majercik2019_renderer.cpp  majercik2019_renderer.h  majercik2022_bidirectional_path_tracer.cpp  majercik2022_renderer.h  (+23 more)
src/input/: fake_input.cpp  fake_input.h  free_input.cpp  free_input.h  input.h  real_input.cpp  real_input.h  spherical_input.cpp  spherical_input.h
src/math/: matrix.h  rotation.cpp  rotation.h  vector.h
(+3 files in other folders)
